[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/UILayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/match_setup/ModeScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/MatchSetup.gd" type="Script" id=3]
[ext_resource path="res://src/main/match_setup/ReadyScreen.tscn" type="PackedScene" id=4]

[node name="MatchSetup" type="Node2D"]
script = ExtResource( 3 )

[node name="UILayer" parent="." instance=ExtResource( 1 )]

[node name="ModeScreen" parent="UILayer/Screens" index="0" instance=ExtResource( 2 )]
visible = false

[node name="ReadyScreen" parent="UILayer/Screens" index="1" instance=ExtResource( 4 )]
visible = false
[connection signal="back_button" from="UILayer" to="." method="_on_UILayer_back_button"]
[connection signal="ready_pressed" from="UILayer/Screens/ReadyScreen" to="." method="_on_ReadyScreen_ready_pressed"]

[editable path="UILayer"]
